--- a/styles/home.css
+++ b/styles/home.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;500;700&display=swap');
 
 * {
     margin: 0;
@@ -12,8 +12,9 @@ body {
 }
 
 header {
-    background-color: darkgreen;
+    background-color: #2D4A22;
     width: 100%;
+    min-width: 340px;
     height: 250px;
     display: flex;
     flex-direction: column;
@@ -27,23 +28,25 @@ header img {
     margin-top: 30px;
 }
 
-section {
+section.balance {
     width: 45%;
-    min-width: 350px;
+    min-width: 340px;
     margin: -100px auto 0 auto;
     display: flex;
     flex-direction: column;
 }
 
-section h3 {
-    font-size: 26px;
+section.balance h3,
+section.transactions h3 {
+    font-size: 22px;
     margin: 10px 0;
     color: white;
+    font-weight: 500;
 }
 
-section .input,
-section .output,
-section .total {
+section.balance .input,
+section.balance .output,
+section.balance .total {
     background-color: #FFF;
     width: 100%;
     height: 100px;
@@ -55,45 +58,65 @@ section .total {
     border-radius: 7px;
 }
 
-section .total {
-    background-color: green;
+section.balance .total {
+    background-color: #49AA26;
     color: white;
 }
 
-section .input p,
-section .output p,
-section .total p {
+section.balance .input p,
+section.balance .output p,
+section.balance .total p {
     font-size: 17px;
 }
 
-section .input h4,
-section .output h4,
-section .total h4 {
+section.balance .input h4,
+section.balance .output h4,
+section.balance .total h4 {
     font-size: 30px;
 }
 
-table {
-    background-color: white;
+section.transactions {
     width: 45%;
+    min-width: 340px;
     margin: 20px auto;
-    padding: 30px;
-    border-radius: 7px;
+    display: flex;
+    flex-direction: column;
 }
 
-thead {
-    text-align: left;
+section.transactions h3 {
+    color: rgba(0, 0, 0, 0.8);
 }
 
-thead tr th {
-    background-color: #d4d1d1;
-    padding: 15px;
-    border-radius: 7px;
+section.transactions table {
+    width: 100%;
+    padding: 10px;
+    border-spacing: 0 0.5rem;
 }
 
+thead tr th,
 tbody tr td {
-    background-color: #ece8e8;
+    background-color: white;
     padding: 15px;
-    border-radius: 7px;
+    text-align: center;
+    transition: 300ms;
+    font-weight: 500;
+}
+
+tbody tr:hover {
+    cursor: pointer;
+    opacity: 0.7;
+}
+
+td.description {
+    color: darkblue;
+}
+
+td.income {
+    color: #12A454;
+}
+
+td.expense {
+    color: #E92929;
 }
 
 footer {
@@ -107,5 +130,5 @@ footer {
 
 footer p {
     font-size: 16px;
-    font-weight: bold;
+    font-weight: 500;
 }
