--- a/styles/home.css
+++ b/styles/home.css
@@ -29,11 +29,12 @@ header img {
 }
 
 section.balance {
-    width: 45%;
+    width: 70%;
     min-width: 340px;
-    margin: -100px auto 0 auto;
+    margin: -80px auto 0 auto;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    justify-content: center;
 }
 
 section.balance h3,
@@ -48,14 +49,23 @@ section.balance .input,
 section.balance .output,
 section.balance .total {
     background-color: #FFF;
-    width: 100%;
-    height: 100px;
+    width: 300px;
+    height: 120px;
     padding: 0 20px;
-    margin: 10px 0;
+    margin: 10px;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
     border-radius: 7px;
+}
+
+section.balance .input .input-top,
+section.balance .output .output-top,
+section.balance .total .total-top {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
 }
 
 section.balance .total {
@@ -76,11 +86,27 @@ section.balance .total h4 {
 }
 
 section.transactions {
-    width: 45%;
+    width: 70%;
     min-width: 340px;
-    margin: 20px auto;
+    max-width: 700px;
+    margin: 50px auto;
     display: flex;
     flex-direction: column;
+}
+
+section.transactions a {
+    width: 130px;
+    color: #49aa26c9;
+    text-decoration: none;
+    transition: 400ms;
+}
+
+section.transactions a:hover {
+    color: #44ff00c0;
+}
+
+section.transactions a img {
+    margin-right: 10px;
 }
 
 section.transactions h3 {
@@ -89,7 +115,7 @@ section.transactions h3 {
 
 section.transactions table {
     width: 100%;
-    padding: 10px;
+    margin-top: 10px;
     border-spacing: 0 0.5rem;
 }
 
@@ -131,4 +157,83 @@ footer {
 footer p {
     font-size: 16px;
     font-weight: 500;
+}
+
+/* Modal */
+
+.modal-overlay {
+    background-color: rgba(0, 0, 0, 0.7);
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    opacity: 0;
+    visibility: hidden;
+}
+
+.modal-overlay.active {
+    opacity: 1;
+    visibility: visible;
+}
+
+.modal-overlay .modal {
+    background-color: #eee3e3;
+    width: 40%;
+    min-width: 360px;
+    max-width: 550px;
+}
+
+.modal-overlay .modal .modal-content {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    padding: 20px;
+}
+
+.modal-overlay .modal .modal-content h3 {
+    font-size: 24px;
+    margin: 20px 0;
+}
+
+.modal-overlay .modal .modal-content form input {
+    width: 100%;
+    height: 40px;
+    margin: 5px 0;
+    border: 0;
+    outline: none;
+    padding: 0 5px;
+}
+
+.modal-overlay .modal .modal-content form span {
+    font-size: 12px;
+    color: rgb(104, 102, 102);
+    margin-bottom: 20px;
+}
+
+.modal-overlay .modal .modal-content form .button-actions {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.modal-overlay .modal .modal-content form .button-actions button {
+    width: 47%;
+    height: 50px;
+    outline: none;
+    cursor: pointer;
+    margin-top: 15px;
+}
+
+.modal-overlay .modal .modal-content form .button-actions button#cancel {
+    border: 1px solid red;
+    color: red;
+}
+
+.modal-overlay .modal .modal-content form .button-actions button#save {
+    background-color: green;
+    border: 0;
+    color: white;
 }
