--- a/styles/home.css
+++ b/styles/home.css
@@ -198,10 +198,14 @@ footer p {
     margin: 20px 0;
 }
 
+.modal-overlay .modal .modal-content form {
+    padding: 20px 0;
+}
+
 .modal-overlay .modal .modal-content form input {
     width: 100%;
     height: 40px;
-    margin: 5px 0;
+    margin: 10px 0;
     border: 0;
     outline: none;
     padding: 0 5px;
@@ -209,14 +213,18 @@ footer p {
 
 .modal-overlay .modal .modal-content form span {
     font-size: 12px;
-    color: rgb(104, 102, 102);
-    margin-bottom: 20px;
+    color: black;
+    opacity: 0.4;
+    margin-bottom: 10px;
+    display: inline-block;
 }
 
 .modal-overlay .modal .modal-content form .button-actions {
     display: flex;
     flex-direction: row;
+    align-items: center;
     justify-content: space-between;
+    margin-top: 20px;
 }
 
 .modal-overlay .modal .modal-content form .button-actions button {
@@ -224,16 +232,35 @@ footer p {
     height: 50px;
     outline: none;
     cursor: pointer;
-    margin-top: 15px;
+    font-size: 16px;
 }
 
-.modal-overlay .modal .modal-content form .button-actions button#cancel {
-    border: 1px solid red;
+.modal-overlay .modal .modal-content form .button-actions a#cancel {
+    border: 2px solid red;
     color: red;
+    width: 47%;
+    height: 50px;
+    outline: none;
+    text-decoration: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 5px;
+    opacity: 0.6;
+}
+
+.modal-overlay .modal .modal-content form .button-actions a#cancel:hover {
+    opacity: 1;
 }
 
 .modal-overlay .modal .modal-content form .button-actions button#save {
     background-color: green;
     border: 0;
     color: white;
+    border-radius: 5px;
+    transition: 400ms;
+}
+
+.modal-overlay .modal .modal-content form .button-actions button#save:hover {
+    background-color: rgb(6, 88, 6);
 }
